# hoplite

./: .gitignore  CMakeLists.txt  Makefile  README.md  all_reduce_test.cc  all_reduce_test.sh  allgather_test.cc  allgather_test.sh  allreduce_test.cc  allreduce_test.sh  auto_test.sh  auto_test_large.sh  check_env.py  check_env_remote.py  cluster.yaml  distributed_object_store.cc  distributed_object_store.h  format.sh  fornode  gather_test.cc  gather_test.sh  get_ip_address.sh  global_control_store.cc  global_control_store.h  init_env.py  install_dependencies.sh  install_gloo.sh  kill_rank.sh  load_cluster_env.sh  mpi_broadcast.sh  mpi_reduce.sh  mpirun_pernode.sh  multicast.sh  multicast_test.cc  multicast_test.sh  notification.cc  notification.h  notification_test.sh  object_control.cc  object_control.h  (+30 more)
_archived/: compare_bcast.c  hoplite_microbenchmarks.py  notification_test.sh  restart_all_workers.sh
_archived/cluster-config/: cluster.yaml  large_cluster.yaml  new_cluster.yaml  single-nc.yaml  single-new.yaml  single.yaml  siyuan-old.yaml
_archived/fault_tolerance_tests/: enable_failure.patch  run_test_fault_tolerance.sh
_archived/parameter-server/: mpi_test.py  run_ps_tests.sh
_archived/script/: timeline.py
app/parameter-server/: README.md  analyze_fault_tolerance.py  asgd_fault_tolerance.py  cluster-asgd.yaml  cluster.yaml  compare_hoplite_mpi.sh  gloo_all_reduce.py  hoplite_all_reduce.py  hoplite_asgd_fault_tolerance.py  mpi_all_reduce.py  mpi_parameter_server.py  mpi_test.py  parameter_server.py  parameter_server_remote.py  parse_results.py  plot_async_ps_results.py  ps_helper.py  ray_asgd_fault_tolerance.py  ray_parameter_server_baseline.py  ray_parameter_server_remote.py  run_allreduce_tests.sh  run_async_ps_fault_tolerance.sh  run_async_ps_tests.sh  run_gloo_allreduce.sh  run_mpi_allreduce.sh  run_ps_tests.sh
app/ray_serve/: README.md  analyze.py  cluster-alternative.yaml  cluster.yaml  hoplite  hoplite_model_ensembling.py  hoplite_model_ensembling_fault_tolerance.py  model_ensembling.py  model_ensembling_fault_tolerance.py  requirements.txt  utils.py
app/rllib/: README-with-ami.md  README.md  cluster-test.yaml  cluster.yaml  example.yaml  initial.yaml
cluster-config/: README.md  cluster-new.yaml  cluster.yaml  gpu.yaml  initial.yaml  large-cluster.yaml  new_cluster.yaml  requirements.txt  single.yaml  siyuan.yaml
cmake/: FindGRPC.cmake
dask/: allreduce.py  auto_dask_benchmark.py  broadcast.py  cleanup_dask.sh  dask_benchmark.py  dask_round_trip.py  gather.py  parse_results.py  reduce.py  run_dask.sh
fault_tolerance_tests/: README.md  test_wrapper_fault_tolerance.sh
gloo/: auto_test_gloo.sh  parse_gloo_result.py  run_benchmark.sh
microbenchmarks/: README.md  draw_collective_communication.py  plot_rtt.py  roundtrip.sh
microbenchmarks/cluster-config/: README.md  example.yaml  initial.yaml  siyuan.yaml
microbenchmarks/cluster-config-access-results-only/: README.md  example.yaml
microbenchmarks/cluster-config-with-ami/: README.md
microbenchmarks/dask-python/: auto_test.sh  cleanup_dask.sh  dask_benchmark.py  dask_roundtrip.py  dask_roundtrip.sh  parse_result.py  parse_results.py  run_dask.sh
microbenchmarks/gloo-cpp/: .gitignore  README.md  auto_test.sh  install_gloo.sh  parse_result.py  run_test.sh  test_wrapper.sh
microbenchmarks/hoplite-cpp/: README.md  auto_test.sh  coverage_test.sh  parse_result.py  pressure_test.sh  run_test.sh
microbenchmarks/hoplite-python/: Makefile  README.md  auto_test.sh  coverage_test.sh  hoplite_microbenchmarks.py  hoplite_microbenchmarks_mpi.py  parse_result.py  parse_roundtrip_result.py  pressure_test.sh  run_test.sh  test_wrapper.sh
microbenchmarks/mpi-cpp/: .gitignore  Makefile  README.md  allgather.c  allreduce.c  auto_test.sh  gather.c  mpi_roundtrip.sh  multicast.c  parse_mpi_result.py  parse_result.py  parse_roundtrip_result.py  reduce.c  roundtrip.c  run_test.sh  test_wrapper.sh
microbenchmarks/ray-python/: README.md  auto_test.sh  launch_ray_microbenchmarks.py  ray_microbenchmarks.py  ray_roundtrip.py  roundtrip.py  (+1 more)
mpi/: .gitignore  Makefile  allgather.c  allreduce.c  compare_bcast.c  gather.c  mpi_allgather.sh  mpi_allreduce.sh  mpi_compare_bcast.sh  mpi_gather.sh  mpi_reduce.sh  mpi_run_test.sh  mpi_sendrecv.sh  multicast.c  reduce.c  send_recv.c
python/: _client.pxd  _client.pyx  _hoplite_client.pxd  _hoplite_client.pyx  auto_ray_benchmarks.py  auto_test.sh  basic_test.py  exit_test.py  launch_test.py  multicast_test.py  parse_ray_result.py  ray_benchmarks.py  setup.py  setup.sh  test_functions.py  utils.py
script/: README.md  find_missing_tests.py  parse_mpi_result.py  parse_result.py  timeline.py
src/: dependency.cc  dependency.h  distributed_object_store.cc  distributed_object_store.h  finegrained_pipelining.h  global_control_store.cc  global_control_store.h  local_store_client.cc  local_store_client.h  notification.cc  notification.h  notification_listener.cc  notification_listener.h  notification_server_test.cc  object_control.cc  object_control.h  object_sender.cc  object_sender.h  object_store.proto  object_store_state.cc  object_store_state.h  object_writer.cc  object_writer.h  receiver.cc  receiver.h  reduce_dependency.cc  reduce_dependency.h
test_utils/: load_cluster_env.sh  mpirun_pernode.sh  result_parser_utils.py
util/: logging.cc  logging.h  plasma_utils.cc  plasma_utils.h  socket_utils.cc  socket_utils.h  test_utils.h
(+57 files in other folders)
